--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "pg": "^5.1.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.23.3",
-    "sqlite3": "^3.1.4",
-    "static-server": "^2.0.2"
+    "sqlite3": "^3.1.4"
   }
 }
